--- a/combinator.cabal
+++ b/combinator.cabal
@@ -27,4 +27,4 @@ library
                         hot
     default-language:   Haskell2010
     default-extensions:
-    ghc-options:        -Wall
+    ghc-options:        -O2 -Wall
